# controllers/Liste.js
@@ -3,8 +3,8 @@
 var utils = require('../utils/writer.js');
 var Liste = require('../service/ListeService');
 
-module.exports.aggiungiAttivitaALista = function aggiungiAttivitaALista (req, res, next, id, attivita) {
-  Liste.aggiungiAttivitaALista(req, id, attivita)
+module.exports.aggiungiAttivitaALista = function aggiungiAttivitaALista (req, res, next, attivita, id) {
+  Liste.aggiungiAttivitaALista(req, attivita, id)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -53,8 +53,8 @@ module.exports.getListe = function getListe (req, res, next) {
     });
 };
 
-module.exports.rimuoviAttivitaDaLista = function rimuoviAttivitaDaLista (req, res, next, id, indice) {
-  Liste.rimuoviAttivitaDaLista(req, id, indice)
+module.exports.rimuoviAttivitaDaLista = function rimuoviAttivitaDaLista (req, res, next, indice, id) {
+  Liste.rimuoviAttivitaDaLista(req, indice, id)
     .then(function (response) {
       utils.writeJson(res, response);
     })
