# swagger.yaml
@@ -7,7 +7,7 @@ info:
   license:
     name: GPL-3.0 license
     url: https://github.com/IS-T51/animati/blob/main/LICENSE
-  version: 0.2.1
+  version: 0.2.3
 servers:
 - url: https://api.animati.app/
 - url: http://localhost:8080/
@@ -193,6 +193,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Token'
+        "201":
+          description: Registrazione effettuata
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Token'
         "400":
           description: Richiesta non valida
           content:
@@ -272,7 +278,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Risposta'
+                $ref: '#/components/schemas/Attivita'
         "400":
           description: Richiesta non valida
           content:
@@ -325,7 +331,7 @@ paths:
           type: string
       responses:
         "200":
-          description: Lista di valutazioni
+          description: Valutazione dell'attività
           content:
             application/json:
               schema:
@@ -504,12 +510,6 @@ paths:
               $ref: '#/components/schemas/Segnalazione'
         required: true
       responses:
-        "200":
-          description: Segnalazione aggiornata
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Risposta'
         "201":
           description: Segnalazione aggiunta
           content:
@@ -691,7 +691,7 @@ paths:
               $ref: '#/components/schemas/Attivita'
         required: true
       responses:
-        "200":
+        "201":
           description: Attività aggiunta
           content:
             application/json:
@@ -737,7 +737,7 @@ paths:
           format: date-time
       responses:
         "200":
-          description: Catalogo aggiornato
+          description: Attività da aggiornare
           content:
             application/json:
               schema:
@@ -745,6 +745,12 @@ paths:
                 items:
                   $ref: '#/components/schemas/Attivita'
                 x-content-type: application/json
+        "204":
+          description: Nessuna attività da aggiornare
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Risposta'
         "400":
           description: Richiesta non valida
           content:
@@ -801,7 +807,7 @@ paths:
               $ref: '#/components/schemas/Lista'
         required: true
       responses:
-        "200":
+        "201":
           description: Lista aggiunta
           content:
             application/json:
@@ -905,7 +911,7 @@ paths:
           pattern: "^[a-f\\d]{24}$"
           type: string
       responses:
-        "200":
+        "201":
           description: Attività aggiunta alla lista
           content:
             application/json:
@@ -1105,6 +1111,12 @@ paths:
         required: true
       responses:
         "200":
+          description: Etichetta aggiornata
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Etichetta'
+        "201":
           description: Etichetta aggiunta
           content:
             application/json:
@@ -1145,6 +1157,12 @@ paths:
       responses:
         "200":
           description: Pong
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Risposta'
+        "418":
+          description: I'm a teapot
           content:
             application/json:
               schema:
@@ -1430,6 +1448,7 @@ components:
           - 401
           - 403
           - 404
+          - 418
           - 500
           default: 401
         messaggio:
@@ -1468,8 +1487,7 @@ components:
           token:
             type: string
             readOnly: true
-            example:
-              token: token
+            example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjAwMDAwMDAwMDAwMDAwMDAwMDAwIiwiZW1haWwiOiJ0ZXN0QGFuaW1hdGkuYXBwIiwiaW1tYWdpbmUiOiJodHRwczovL3d3dy5hbmltYXRpLmFwcC9hc3NldHMvaW1nL2xvZ285Ni5wbmciLCJydW9sbyI6ImFtbWluaXN0cmF0b3JlIiwicHJvbW9zc29EYSI6IjAwMDAwMDAwMDAwMDAwMDAwMDAwIn0.7VUJK3mbI014Tvkjr6AwJhjCPo5tTPBRmuuLsYJa61c"
   securitySchemes:
     autenticato:
       type: http
